# evetrade-data-sync-service

./: .pre-commit-config.yaml  README.md  app.py  example.env  pyproject.toml
.github/workflows/: check.yml  ci.yml  sync.yml
esipy/: README.md  __init__.py  app.py  cache.py  client.py  events.py  exceptions.py  security.py  utils.py
sync_service/: check_data.py  citadel_data.py  market_data.py
