[project]
name = "evetrade-data-sync-service"
version = "0.1.0"
description = "The data sync service deployed via AWS Lambda"
authors = [{ name = "awhipp", email = "alexruns4@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "boto3 (>=1.40.10,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "elasticsearch (>=7.13,<7.14)",
    "python-jose (>=3.0,<4.0)",
    "flask (>=3.1.1,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "urllib3 (>=1.21.1,<2)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "idna (>=3.10,<4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pre-commit = "^4.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
